tests/snapshots/integration_test__help.snap
---
source: tests/integration_test.rs
info:
  program: qmkfmt
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Formatter for QMK keymaps

Usage: qmkfmt [OPTIONS] [PATH]

Arguments:
  [PATH]  Path to keymap.c to format. If omitted, reads stdin and writes to stdout

Options:
      --split-spaces <SPLIT_SPACES>  Number of spaces to insert between sides of the keyboard
      --pretty                       Add comment characters in a grid around keys
  -h, --help                         Print help
  -V, --version                      Print version

----- stderr -----
